Fixing the wrapping

--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -36,6 +36,7 @@ main .hero h1 {
   text-align: left;
   display: inline-block;
   font-weight: 400;
+  width: 490px;
 }
 
 main .hero em {
